fix(security): FORGE-631 harden password reset against traversal and token abuse
Prevent JCR path traversal by validating userId before path construction.
Add per-username rate limiting to slow automated reset enumeration.
Persist reset token before sending email; clear token before saving password.
Remove token URL from debug logs; escape feedback panel output to prevent XSS.
Fix "null null" display name bug and align demo version references to 7.0.1-SNAPSHOT.

(co-authored with Claude Code)